# diario-ia

./: .gitignore  Cargo.toml  PLAN.md  README.md  justfile
crates/client/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/client/src/: api.rs  app.rs  ffi.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  mcp.rs  render.rs  state.rs  static_files.rs  storage.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
migrations/: 0001_init.sql
