[workspace]
resolver = "2"
members = ["crates/shared", "crates/server", "crates/client"]
# El cliente se compila SOLO para wasm32 con trunk (ver justfile). No incluir en
# builds de host: usa `cargo ... -p diario-server` para el servidor.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Universidad de Alicante"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Server-side shared deps
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
comrak = "0.29"
ammonia = "4"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
rust-embed = { version = "8", features = ["mime-guess"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
