[package]
name = "diario-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "diario-client"
path = "src/main.rs"

[dependencies]
diario-shared = { path = "../shared" }
leptos = { version = "0.8", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
gloo-net = { version = "0.7", features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Location",
    "History",
    "Element",
    "Event",
    "EventTarget",
] }
console_error_panic_hook = "0.1"

# Perfil de release para wasm: tamano.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
