[package]
name = "diario-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "diario"
path = "src/main.rs"

[dependencies]
diario-shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
comrak = { workspace = true }
ammonia = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
